proxy: add palm support

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,8 +5,9 @@ compatibility_date = "2023-07-10"
 # Variable bindings. These are arbitrary, plaintext strings (similar to environment variables)
 # Note: Use secrets to store sensitive data.
 # Docs: https://developers.cloudflare.com/workers/platform/environment-variables
-# [vars]
-# MY_VARIABLE = "production_value"
+[vars]
+ANTHROPIC_VERSION='2023-06-01'
+AZURE_OPENAI_RESOURCE_NAME='oait'
 
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/workers/runtime-apis/kv
